Fix layout issues, add grid toggle with <C-.>

--- a/src/frontend/public/app.css
+++ b/src/frontend/public/app.css
@@ -1,3 +1,11 @@
+body.debug {
+  background-size: 2em 2em;
+  background-image:
+    linear-gradient(to right, #222 1px, transparent 1px),
+    linear-gradient(to bottom, #222 1px, transparent 1px);
+
+}
+
 h1 {
     font-size: 1.5em;
     color: white;
